fix some spacing so it's less

--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ img {
     display: inline-grid;
     grid-template-columns: 2fr 3fr;
     width: 100%;
-    column-gap: 2rem;
+    column-gap: 1.2rem;
     align-items: center;
     height: 2.75rem;
 }
